--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="none">...</string>
     <string name="slided">SLIDED</string>
     <string name="slidebutton">SlideButton</string>
+    <string name="richedittext">RichEditText</string>
 </resources>
